<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">대구로</string>
    <string name="kakao_app_key">7bd45e3826f58e6f23c485e3bb87ab1b</string>
    <string name="kakao_sheme">kakao7bd45e3826f58e6f23c485e3bb87ab1b</string>
    <string name="kakao_rest_key">KakaoAK 72609bc7d1cc22fcee39bb2cf87495dc</string>
    <string name="naver_client_id">SJVCXPsMUQCPYeSTfIKi</string>
    <string name="naver_client_secret">zgcLcBeIyv</string>
    <string name="naver_client_name">daegudelivery</string>
    <string name="naver_platform_id">1rslh5418a</string>
    <string name="naver_platform_secret_key">irPi5J2dE0XPX4IoS8NYRZ6WacTfm9mobSTcRmgn</string>
    <string name="facebook_application_id">707582324070278</string>
    <string name="facebook_client_token">65988d2c41fd84ffc442cc2e3c19d3bd</string>
    <string name="developer_email" translatable="false">insungdata@isdata.kr</string>
    <string name="customer_center_tel" translatable="false">1661-3773</string>
    <string name="customer_operation_time" translatable="false">운영시간 10:00 ~ 18:00 (공휴일 휴무)</string>
    <string name="app_copyright">Copyright ⓒ 2021 INSUNGDATA. All rights reserved.</string>
    <string name="kakao_channel_link_customer_center">http://pf.kakao.com/_xbdUKs</string>
    <string name="kakao_channel_link_event">http://pf.kakao.com/_bArRs</string>
    <string name="insungdata">인성데이타(주)</string>
    <string name="insungdata_business_info_detail" tools:ignore="TypographyDashes">대표자: 최현환&#160;&#160;&#160;&#160;사업자등록번호: 503–81–50051\n통신판매번호: 2005-대구서구-0304호\n주소: 대구광역시 서구 북비산로 369 2층, 4층\n고객센터:</string>
    <string name="business_info_description">대구로 앱은 통신판매중개자이며 통신판매의 당사자가 아닙니다. 따라서 상품거래정보 및 거래와 관련하여 대구로 앱에 등록된 판매자의 고의 또는 과실로 소비자에게 발생하는 손해에 대하여 대구로 앱은 책임을 지지 않습니다. 상품 및 거래에 관하여 정확한 정보는 해당 판매자에게 직접 확인하여 주시기 바랍니다.</string>
    <string name="agree_service_use_link">https://terms.daeguro.co.kr:45028/agreement/agreement1.htm</string>
    <string name="agree_privacy_other_people_share_link2">https://terms.daeguro.co.kr:45028/agreement/agreement16-1.htm</string>
    <string name="agree_gps_use_link">https://terms.daeguro.co.kr:45028/agreement/agreement2.htm</string>
    <string name="agree_privacy_link">https://terms.daeguro.co.kr:45028/agreement/agreement3.htm</string>
    <string name="agree_marketing_receive">https://terms.daeguro.co.kr:45028/agreement/agreement5.htm</string>
    <string name="agree_digital_trans_link">https://terms.daeguro.co.kr:45028/agreement/agreement1.htm</string>
    <string name="agree_privacy_and_use_choice_link">https://terms.daeguro.co.kr:45028/agreement/agreement6.htm</string>
    <string name="agree_privacy_and_use_essential_link">https://terms.daeguro.co.kr:45028/agreement/agreement7.htm</string>
    <string name="agree_privacy_other_people_share_link">https://terms.daeguro.co.kr:45028/agreement/agreement8.html</string>
    <string name="agree_privacy_and_use_link">https://terms.daeguro.co.kr:45028/agreement/agreement9.htm</string>
    <string name="agreement10_link" tools:ignore="TypographyDashes">https://terms.daeguro.co.kr:45028/agreement/agreement10.htm</string>
    <string name="agree_children_privacy_link">https://www.naver.com</string>
    <string name="agreement17_1_link" tools:ignore="TypographyDashes">https://terms.daeguro.co.kr:45028/agreement/agreement17-1.htm</string>
    <string name="agreement17_2_link" tools:ignore="TypographyDashes">https://terms.daeguro.co.kr:45028/agreement/agreement17-2.htm</string>
    <string name="agreement18_link">https://terms.daeguro.co.kr:45028/agreement/agreement18.htm</string>
    <string name="agreement18_1_link" tools:ignore="TypographyDashes">https://terms.daeguro.co.kr:45028/agreement/agreement18-1.htm</string>
    <string name="agreement18_3_link" tools:ignore="TypographyDashes">https://terms.daeguro.co.kr:45028/agreement/agreement18-3.htm</string>
    <string name="naver_blog_url">https://m.blog.naver.com/PostList.naver?blogId=appisdata&amp;categoryNo=19&amp;listStyle=style1</string>
    <string name="reserve">예약</string>
    <string name="food_shop_reserve">음식점 예약</string>
    <string name="taxi_call">택시호출</string>
    <string name="alarm">알림</string>
    <string name="card_management">카드/계좌관리</string>
    <string name="business_info">사업자정보</string>
    <string name="agreement">이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="privacy_policy_and_use">개인정보 수집 및 이용</string>
    <string name="have_no_notice">공지사항이 없습니다.</string>
    <string name="have_no_event">진행중인 이벤트가 없습니다.</string>
    <string name="reset">초기화</string>
    <string name="message_init_exception">초기값 설정이 올바르지 않습니다.</string>
    <string name="sort_by_recommend">찜 많은 순</string>
    <string name="sort_by_distance">가까운 순</string>
    <string name="sort_by_order">주문 많은 순</string>
    <string name="sort_by_new_shop">신규 매장 순</string>
    <string name="sort_by_many_review">리뷰 많은순</string>
    <string name="sort_by_new">최신 순</string>
    <string name="sort_by_star_high">별점 높은 순</string>
    <string name="sort_by_star_low">별점 낮은 순</string>
    <string name="sort_by_latest">최신순</string>
    <string name="sort_by_price_high">금액 높은 순</string>
    <string name="sort_by_price_low">금액 낮은 순</string>
    <string name="sort_by_order_many">주문 많은 순</string>
    <string name="copy_address">주소 복사</string>
    <string name="re_use">다음에도 사용</string>
    <string name="safety_number_use">안심번호 사용</string>
    <string name="board_city_hall_title">대구시 알림이</string>
    <string name="msg_notice_empty">공지사항이 존재하지 않습니다.</string>
    <string name="msg_event_empty">이벤트가 존재하지 않습니다.</string>
    <string name="plz_select_pay_card">결제하실 카드를 선택해주세요</string>
    <string name="plz_select_position_for_delivery">지도를 움직여 배달 받을 위치를 설정해 주세요</string>
    <string name="plz_select_coupon">쿠폰을 선택해주세요</string>
    <string name="plz_input_coupon_code">쿠폰코드를 입력해주세요</string>
    <string name="plz_input_search_word">검색할 단어를 입력해주세요</string>
    <string name="plz_select_voucher">상품권을 선택해주세요</string>
    <string name="exist_new_update">최신 업데이트가 있습니다.</string>
    <string name="confirm_app_new_version_update">최신 업데이트가 있습니다. 업데이트 하시겠습니까?</string>
    <string name="confirm_stop_join">회원가입을 중지하시겠습니까?</string>
    <string name="confirm_app_finish">앱을 종료하시겠습니까?</string>
    <string name="msg_not_service_area">서비스 불가 지역입니다.</string>
    <string name="msg_question_exact_address">잠깐! 이 주소가 맞나요?</string>
    <string name="msg_happy_pay_discount">행복페이 결제 시, 5% 추가할인!</string>
    <string name="delivery_msg_order_delete_popup_title">해당 주문내역을 삭제하시겠습니까?</string>
    <string name="delivery_msg_order_delete_popup_contents">삭제 후에는 복구할 수 없습니다.</string>
    <string name="reserve_msg_order_delete_popup_title">해당 예약내역을 삭제하시겠습니까?</string>
    <string name="reserve_msg_order_delete_popup_contents">삭제 후에는 복구할 수 없습니다.</string>
    <string name="do_order_remove">주문내역 삭제</string>
    <string name="do_coupon_regist">쿠폰 등록하기</string>
    <string name="do_qrcode_read">QR코드 인식</string>
    <string name="do_start">시작하기</string>
    <string name="do_change">변경하기</string>
    <string name="do_setting">설정하기</string>
    <string name="do_tel">전화하기</string>
    <string name="do_save">저장하기</string>
    <string name="do_share">공유하기</string>
    <string name="do_view_map">지도 보기</string>
    <string name="do_pay">결제하기</string>
    <string name="do_regist">등록하기</string>
    <string name="do_get_auth_number">인증번호 받기</string>
    <string name="do_withdrawal">탈퇴하기</string>
    <string name="do_use">사용하기</string>
    <string name="do_apply">적용하기</string>
    <string name="do_join">가입하기</string>
    <string name="do_move_order">주문하러 가기</string>
    <string name="do_order_breakdown_confirm">주문내역 확인하기</string>
    <string name="do_copy_url">URL 복사</string>
    <string name="do_copy_info">공유내용 복사</string>
    <string name="route_map">길찾기</string>
    <string name="copy">복사</string>
    <string name="share_by_kakaotalk">카카오톡으로 공유</string>
    <string name="share_by_sms">문자로 공유</string>
    <string name="mileage_use">마일리지 사용</string>
    <string name="use_all">모두 사용</string>
    <string name="safety_number_notice">안심번호는 개인정보 보호를 위해 연락처 정보가 유출되지 않도록 1회성 임시번호를 발급하는 서비스입니다. 발급된 안심번호는 일정시간 이후 자동으로 해지됩니다.</string>
    <string name="agree_service_use_title">서비스 이용약관</string>
    <string name="agree_privacy_title">개인정보 처리방침</string>
    <string name="agree_gps_use_title">위치정보 이용약관</string>
    <string name="agree_privacy_other_people_share_title">개인정보 제3자 제공 동의</string>
    <string name="agree_marketing_info_title">마케팅 정보 수신동의</string>
    <string name="next_time">다음에</string>
    <string name="update">업데이트</string>
    <string name="home">홈</string>
    <string name="bookmark">단골 찜</string>
    <string name="benefit">혜택가득</string>
    <string name="delivery_breakdown">주문내역</string>
    <string name="reserve_breakdown">예약내역</string>
    <string name="my_page">마이페이지</string>
    <string name="order_breakdown">주문내역</string>
    <string name="view_contents_underline"><u>내용보기</u></string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pw_reset">비밀번호 재설정</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="join">회원가입</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="join_by_email">이메일로 회원가입</string>
    <string name="change_by_social">간편 로그인 계정입니다.\n해당 소셜사이트에서 변경해주세요</string>
    <string name="manage_my_info">내 계정관리</string>
    <string name="withdrawal_description">잠깐! 회원 탈퇴에 앞서 유의사항을 반드시 확인하고 진행해주세요</string>
    <string name="withdrawal_warning_title">탈퇴 유의사항</string>
    <string name="withdrawal_warning1">계정 정보(ID/PW), 이용내역, 단골 찜 내역 등의 데이터가 소멸되며, 복구 불가합니다.</string>
    <string name="withdrawal_warning2">개인정보는 최대 90일간 보관 후 즉시 파기됩니다.</string>
    <string name="withdrawal_warning3">회원 탈퇴 시, 오전 8시 일괄처리 후 재가입 가능합니다.</string>
    <string name="withdrawal_warning4">단, 기존에 보유 중인 쿠폰은 모두 소멸되며 재가입 후 사용 불가합니다.</string>
    <string name="withdrawal_warning5">회원 탈퇴 후, 재가입 시에는 첫 혜택을 받을 수 없습니다.(첫 주문 쿠폰 등)</string>
    <string name="withdrawal_warning6">앱에 등록된 리뷰는 회원정보 삭제로 인해 작성자 본인을 확인할 수 없으므로 리뷰 삭제 불가합니다.</string>
    <string name="withdrawal_data_description1">탈퇴 완료 후 삭제되는 정보는 아래와 같습니다.</string>
    <string name="withdrawal_data_description2">삭제된 데이터는 복구되지 않습니다.</string>
    <string name="withdrawal_data_description3">① 계정정보 (아이디, 비밀번호)\n② 이용내역\n③ 단골 찜 내역\n④ 혜택가득(쿠폰, 마일리지, 스탬프)</string>
    <string name="withdrawal_agree">위 내용 모두 확인하였으며, 회원탈퇴에 동의합니다.</string>
    <string name="input_current_pw">현재 비밀번호 입력</string>
    <string name="withdrawal_last_warning">회원 탈퇴 시, 모든 정보가 삭제되며 복구되지 않습니다. 정말 탈퇴하시겠습니까?</string>
    <string name="self_auth">본인인증</string>
    <string name="self_auth_agreement">본인인증 동의</string>
    <string name="exist_id_google">구글 간편로그인으로 가입된 회원입니다.\n간편 로그인 해주세요</string>
    <string name="exist_id_naver">네이버 간편로그인으로 가입된 회원입니다.\n간편 로그인 해주세요</string>
    <string name="exist_id_kakaotalk">카카오톡 간편로그인으로 가입된 회원입니다.\n간편 로그인 해주세요</string>
    <string name="exist_id_email">이메일로 가입된 회원입니다.\n검색된 아이디로 로그인해 주세요</string>
    <string name="cancel">취소</string>
    <string name="event">이벤트</string>
    <string name="frequently_asked_questions">자주 묻는 질문</string>
    <string name="go_kakao_channel">카카오채널 바로가기</string>
    <string name="customer_counseling_center">고객상담센터</string>
    <string name="close">닫기</string>
    <string name="delete">삭제</string>
    <string name="processing_search_gps">위치탐색중입니다</string>
    <string name="station_by_route">노선번호 순</string>
    <string name="station_by_kind">버스유형 순</string>
    <string name="bus_recent_search_all_delete">김색기록을 모두 삭제하시겠습니다까?</string>
    <string name="bus_map_select">지도에서 선택</string>
    <string name="plz_select_position_for_bus">지도를 움직여 주소를 설정해 주세요</string>
    <string name="bus_start_select">출발지로 선택</string>
    <string name="announcement">공지사항</string>
    <string name="inquiry">문의</string>
</resources>