<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.daegurobus.widget.CommonTitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bottom_line_visibility="gone"
            app:text="대구로 버스" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/v_bottom_line"
            android:layout_below="@id/title_view">

        <com.example.daegurobus.widget.NotSwipeViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"/>
        </FrameLayout>

        <View
            android:id="@+id/v_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/lo_bottom"
            android:background="@color/color_E6E6E6" />

        <LinearLayout
            android:id="@+id/lo_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.example.daegurobus.widget.CommonMainTab
                android:id="@+id/tab_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon_res="@drawable/common_tab_home"
                app:text="@string/home" />

            <com.example.daegurobus.widget.CommonMainTab
                android:id="@+id/tab_announcement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon_res="@drawable/common_alarm_20"
                app:text ="@string/announcement" />

            <com.example.daegurobus.widget.CommonMainTab
                android:id="@+id/tab_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon_res="@drawable/ic_notification_20_dp"
                app:text="@string/event" />

            <com.example.daegurobus.widget.CommonMainTab
                android:id="@+id/tab_inquiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon_res="@drawable/ic_inquiry_20_dp"
                app:text="@string/inquiry" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
</layout>
