<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_area_6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_noto_sans_cj_kkr_regular"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/bus_recent_search_all_delete"
                android:textColor="#333333"
                android:textSize="16dp" />

            <View
                android:id="@+id/v_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_E6E6E6" />

            <LinearLayout
                android:id="@+id/rl_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_noto_sans_cj_kkr_medium"
                    android:gravity="center"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="4dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/cancel"
                    android:textColor="#333033"
                    android:textSize="16dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_E6E6E6" />

                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_noto_sans_cj_kkr_medium"
                    android:gravity="center"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="4dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/delete"
                    android:textColor="@color/color_01CAFF"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</layout>