<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.daegurobus.widget.CommonTitleView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/bus_map_select" />

            <!-- 지도 부분 -->
            <RelativeLayout
                android:id="@+id/lo_view_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_view"
                android:orientation="vertical"
                tools:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/v_address_under">

                    <com.naver.maps.map.MapView
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tv_top_badge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_round_area_17"
                        android:backgroundTint="@color/color_333333_90"
                        android:fontFamily="@font/font_noto_sans_cj_kkr_regular"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.02"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/plz_select_position_for_bus"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="56dp"
                        android:layout_centerInParent="true"
                        android:paddingBottom="28dp"
                        android:src="@drawable/img_store_position_42_dp" />

                    <ImageView
                        android:id="@+id/iv_floating"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="18dp"
                        android:background="@drawable/bg_floating"
                        android:padding="15dp"
                        android:src="@drawable/ic_cur_position_24_dp" />
                </RelativeLayout>

                <View
                    android:id="@+id/v_address_under"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_above="@id/lo_address"
                    android:background="@color/color_E6E6E6" />

                <LinearLayout
                    android:id="@+id/lo_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <TextView
                        android:id="@+id/tv_new_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_noto_sans_cj_kkr_medium"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.02"
                        android:paddingBottom="8dp"
                        android:text="@string/processing_search_gps"
                        android:textColor="@color/color_333333"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tv_old_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_noto_sans_cj_kkr_regular"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.02"
                        android:text="@string/processing_search_gps"
                        android:textColor="@color/color_999999"
                        android:textSize="12dp" />

                    <RelativeLayout
                        android:id="@+id/lo_select_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:background="@drawable/bg_round_area_6"
                        android:backgroundTint="@color/color_01CAFF"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <TextView
                            android:id="@+id/tv_select_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font_noto_sans_cj_kkr_medium"
                            android:gravity="center"
                            android:letterSpacing="-0.02"
                            android:lineSpacingExtra="4dp"
                            android:text="@string/bus_start_select"
                            android:textColor="@color/color_FFFFFF"
                            android:textSize="16dp" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
        <include
            android:id="@+id/lo_loading"
            layout="@layout/common_loading" />
    </FrameLayout>
</layout>